syntax = "proto3";
package com.example.chat;

import "google/protobuf/empty.proto";

/*Then, if there are other robots in Greenfield, the
cleaning robot presents itself to the other ones by sending them
• its position in the grid
• its district
• its ID
• its port number for communications*/

message Presentation {

    Integer32 port = 1;
    Integer32 district = 2;
    Integer32 id = 3;
    Integer32 x = 4;
    Integer32 y = 5;

}

message Goodbye {

    Integer32 from = 1;
    Integer32 id = 2;
}

message Request {

    Integer32 from = 1;
    Integer32 clock = 3;
}

message Authorization {
    Integer32 from = 1;
    bool ok = 2;
    Integer32 clock = 3;
}

message UncontrolledCrash {
   Integer32 id = 1;
}

service CommunicationService {

    rpc removalMsg(Goodbye) returns (google.protobuf.Empty);
    rpc presentationMsg(Presentation) returns (google.protobuf.Empty);
    rpc requestMechanic(Request) returns (Authorization);
    rpc answerPending(Authorization) returns (google.protobuf.Empty);
    rpc organize(UncontrolledCrash) returns (google.protobuf.Empty);
}
